@@ -23,3 +23,7 @@ VALUES ('40011', 'Please choose a creature:', '0', '0', '0', '0', '0', '0', '0',
 -- Elemental focus(shaman talent) correct proc.
 DELETE FROM spell_proc_event WHERE entry = 16164;
 INSERT INTO spell_proc_event (entry, SchoolMask, SpellFamilyName, SpellFamilyMask0, SpellFamilyMask1, SpellFamilyMask2, procFlags, procEx, ppmRate, CustomChance, Cooldown) VALUES (16164, 0, 11, 2416967683, 4096, 0, 0, 2, 0, 0, 0);
+
+-- Fix Dancing Rune Weapon.
+INSERT INTO `spell_proc_event` (entry, procFlags) VALUES
+('49028','69652');
